# landlords

./: .buildinfo  README.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: README.md
_sources/notebooks/: landlords.ipynb
docs/: CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  _config.yml  _toc.yml  bibliography.bib
notebooks/: environment.yml  landlords.html  landlords.ipynb
reports/: _quarto.yml  brief.html  brief.qmd  custom.scss  search.json
reports/_site/: brief.html  search.json
src/landlords/: __init__.py  datasets.py  plotting.py
