[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "landlords"
description = "Leveraging NYC Open Data to Identify Potential Top 10 Violators in New York City"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["template", "reproducibility"]
authors = [{ name = "Gabriel Stefanini Vicente", email = "contact@g4brielvs.me" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = ["pandas>=2", "dask-geopandas", "geopandas", "shapely", "dask[dataframe]", "pyarrow", "h3", "seaborn", "bokeh", "itables", "matplotlib"]
[project.optional-dependencies]
docs = [
	"docutils==0.17.1",    # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book >=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/g4brielvs/landlords"
"Bug Reports" = "https://github.com/g4brielvs/landlords/issues"
"Source" = "https://github.com/g4brielvs/landlords"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "template,"

[tool.hatch.build.targets.wheel]
packages = ["src/landlords"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
